Compositor mix node interpolation bug #49789

Closed
opened 2016-10-19 13:32:18 +02:00 by mickaël bourgeoisat · 16 comments

System Information
windows 10 64 bits
Asus g752 i7 6700HQ gtx 1070
and linux mint 17.3 debian 64 bits
I7 4700 gtx780
Blender Version
2.78 4bb1e22

Short description of error
the mix node interpolation is not correct, it's making sort of filtering.

Exact steps for others to reproduce the error
Take two images as texture image sequences and remove "interpolation" and mip map on them, then add another image with one line black the second white repetively on all the height of the image to use it as mix factor (it can be one line white and another alpha, it's the same result).
You should get one line of the first texture and the second line containing the second texture etc, but that's not the result (please look at the next image).
bug.png
The purpose of this simple compositing is to recreate fields for TV /sat/TNT diffusion ...
That's a major problem in Blender, because progressive rendering can't be used at all in all the TV industrie, so we have to recreate fields by rendering at 50FPS and mix them correctly with a driver on the offset of each texture image sequence (why is it only possible to remove interpolation on image sequence and only on texture image sequence ?).
As the node compositor is not aware of fields even in blender render, and as cycles doesn't manadge fields at all, we have to do this ugly trick to get back our fields, but that's impossible to do with this bug...
Other consequence, if we use same setup of nodes to create sort of "pixelized" effect for the display on a old TV (for exemple), that can't be done...

Thanks by advance for your interest for this bug.

**System Information** windows 10 64 bits Asus g752 i7 6700HQ gtx 1070 and linux mint 17.3 debian 64 bits I7 4700 gtx780 **Blender Version** 2.78 4bb1e22 **Short description of error** the mix node interpolation is not correct, it's making sort of filtering. **Exact steps for others to reproduce the error** Take two images as texture image sequences and remove "interpolation" and mip map on them, then add another image with one line black the second white repetively on all the height of the image to use it as mix factor (it can be one line white and another alpha, it's the same result). You should get one line of the first texture and the second line containing the second texture etc, but that's not the result (please look at the next image). ![bug.png](https://archive.blender.org/developer/F381303/bug.png) The purpose of this simple compositing is to recreate fields for TV /sat/TNT diffusion ... That's a major problem in Blender, because progressive rendering can't be used at all in all the TV industrie, so we have to recreate fields by rendering at 50FPS and mix them correctly with a driver on the offset of each texture image sequence (why is it only possible to remove interpolation on image sequence and only on texture image sequence ?). As the node compositor is not aware of fields even in blender render, and as cycles doesn't manadge fields at all, we have to do this ugly trick to get back our fields, but that's impossible to do with this bug... Other consequence, if we use same setup of nodes to create sort of "pixelized" effect for the display on a old TV (for exemple), that can't be done... Thanks by advance for your interest for this bug.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @myke-octopod

Added subscriber: @myke-octopod

Added subscriber: @Sergey

Added subscriber: @Sergey

Please always attach .blend file which demonstrates the issue.

Please always attach .blend file which demonstrates the issue.

Hi Sergey,
Here come the demo file, the problem occur every 24 lines.
Just open entrelacement.blend and hit f12.
demo.zip

Hi Sergey, Here come the demo file, the problem occur every 24 lines. Just open entrelacement.blend and hit f12. [demo.zip](https://archive.blender.org/developer/F383269/demo.zip)

I can't unpack this archive:

End-of-central-directory signature not found.  Either this file is not
a zipfile, or it constitutes one disk of a multi-part archive.  In the
latter case the central directory and zipfile comment will be found on
the last disk(s) of this archive.

Please double-check it is not trunkated or anything like that..

I can't unpack this archive: ``` End-of-central-directory signature not found. Either this file is not a zipfile, or it constitutes one disk of a multi-part archive. In the latter case the central directory and zipfile comment will be found on the last disk(s) of this archive. ``` Please double-check it is not trunkated or anything like that..

??? strange, it seems it's the gzification thru the site that modify the archive...
here it come in another format...
down.png.tar.gz
regards
myke

??? strange, it seems it's the gzification thru the site that modify the archive... here it come in another format... [down.png.tar.gz](https://archive.blender.org/developer/F383340/down.png.tar.gz) regards myke

Ok, can see some issues, not sure it is same exact tho. So just to confirm, is your bug about some missing hosizontal stripes (as in, sometimes three blue pixels vertically in a colum)?

snapshot47.png

Does it also behave correct for you if you replace alpha texture node with an image node?

Ok, can see some issues, not sure it is same exact tho. So just to confirm, is your bug about some missing hosizontal stripes (as in, sometimes three blue pixels vertically in a colum)? ![snapshot47.png](https://archive.blender.org/developer/F383362/snapshot47.png) Does it also behave correct for you if you replace alpha texture node with an image node?

Yeap, every 24 lines, you can see a doubled lines, but the "fields" mask is continuous, and we've tried already with image nodes, it's the same problem, plus the image node seems to have a bilenear filtering (interpolation) on it, so it's creating more problems, and we have no more choice than texture image nodes.

Yeap, every 24 lines, you can see a doubled lines, but the "fields" mask is continuous, and we've tried already with image nodes, it's the same problem, plus the image node seems to have a bilenear filtering (interpolation) on it, so it's creating more problems, and we have no more choice than texture image nodes.
Sergey Sharybin self-assigned this 2016-10-21 16:58:27 +02:00

Try adding Pixelate node after the image one, might be a workaround for the time being.

Will have a look into texture nodes..

Try adding Pixelate node after the image one, might be a workaround for the time being. Will have a look into texture nodes..

Already tried snifff , still the same :
bug2.png

Already tried snifff , still the same : ![bug2.png](https://archive.blender.org/developer/F383371/bug2.png)

This issue was referenced by fd4caafc53

This issue was referenced by fd4caafc53a1c2558f1a27eeaecffb130a146ff4

I meant pixelate hen using image input node to force it to have nearest interpolation.

In any case, think i've got fix for the bug, will be committed in half a minute.

I meant pixelate hen using image input node to force it to have nearest interpolation. In any case, think i've got fix for the bug, will be committed in half a minute.

Forgot to dump another idea, to work around issue in current 2.78 you can try setting x/y offset of texture node to 1e-6 :)

Forgot to dump another idea, to work around issue in current 2.78 you can try setting x/y offset of texture node to 1e-6 :)

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Hi Sergey, great fix, it's working perfectly well now ;)
I've just tested it in the last 2.78A ;)
Thank you ;)
Have a nice day ;)

Hi Sergey, great fix, it's working perfectly well now ;) I've just tested it in the last 2.78A ;) Thank you ;) Have a nice day ;)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49789
No description provided.