Fix T49789: Compositor mix node interpolation bug